--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <form id="myForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+    <div class="card">
+        <div class="container">
+            <div class="image-container">
+                <img src="https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image" class="left-image">
+            </div>
+            <form id="myForm" class="form-container">
+                <div class="form-group">
+                    <div class="name-group">
+                        <input type="text" id="firstName" name="firstName" placeholder="First Name" required>
+                        <input type="text" id="lastName" name="lastName" placeholder="Last Name" required>
+                    </div>
+                </div>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+                <div class="form-group">
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                </div>
 
-            <button type="submit">Submit</button>
-        </form>
+                <div class="form-group">
+                    <input type="text" id="username" name="username" placeholder="Username" required>
+                </div>
+
+                <div class="form-group">
+                    <input type="password" id="password" name="password" placeholder="Password" required>
+                </div>
+
+                <div class="form-group">
+                    <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
+                </div>
+
+                <button type="submit">Submit</button>
+            </form>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
